--- a/src/components/ui/Search.astro
+++ b/src/components/ui/Search.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/blocks/search.css';
+import '../../styles/blocks/search.css';
 ---
 
 <site-search class="ms-auto" id="search">
@@ -53,7 +53,6 @@ import '../styles/blocks/search.css';
   </dialog>
 </site-search>
 
-/** TODO Write Seaarch script */
 <script>
   class SiteSearch extends HTMLElement {
     #closeBtn: HTMLButtonElement | null;
