--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -30,7 +30,7 @@ const {
 	</head>
 
 	<body
-		class="bg-global-bg text-global-text mx-auto flex min-h-screen max-w-5xl flex-col font-mono text-lg font-normal antialiased sm:px-8"
+		class="bg-global-bg  dark:text-global-text mx-auto flex min-h-screen max-w-5xl flex-col font-mono text-lg font-normal antialiased sm:px-8"
 	>
 		<SkipLink />
 		<ThemeProvider />
