--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,10 +3,10 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 const meta = {
   description: "Learn more about Andrew and where you can find his work.",
-  title: "About"
+  title: "About",
 }
 ---
 
-<BaseLayout>
+<BaseLayout meta={meta}>
   <h1>About Andrew!</h1>
 </BaseLayout>
