--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout meta={{ title: "Home" }}>
-	<section class="mx-auto mt-6 flex flex-col bg-white px-4 py-6">
+	<section class="mx-auto mt-6 flex flex-co px-4 py-6">
 		<div class="max-w-4xl text-left">
 			<h1 class="text-3xl font-bold mb-4">Meditate. Focus. Create.</h1>
 			<p class="text-md">
@@ -16,9 +16,8 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 				tree of knowledge. This is my digital garden, where I cultivate my
 				thoughts, ideas, and projects.
 			</p>
-			<p class="mt-2 text-md">
-				Here'as a breakdown of the main content sections that are a part of my
-				entire creation and learmin
+			<!-- <p class="mt-2 text-md">
+				If you are not sure where to start, here is a list of site sections with a brief description of each:	
 			</p>
 			<ol class="mt-4 list-inside list-decimal pl-2 text-md">
 				<li>
@@ -41,7 +40,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 						href="/notes/catalog">Daily Journal</a
 					>
 				</li>
-				<ul class="mt-2 list-inside list-disc pl-4">
+				<ul class="mt-2 list-inside list-none pl-4">
 					<li>
 						Everything starts here. This garden is modeled similar to my
 						personal Logseq instance, where I journal daily and then link out to
@@ -55,7 +54,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 						href="/notes/catalog">Blog Posts</a
 					>
 				</li>
-				<ul class="mt-2 list-inside list-disc pl-4">
+				<ul class="mt-2 list-inside list-none pl-4">
 					<li>
 						The blog posts are polished and refined pieces of writing that
 						connect notes, ideas, and conclusions I've made from time spent
@@ -70,7 +69,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 						href="/notes/catalog">Sprints and Projects</a
 					>
 				</li>
-				<ul class="mt-2 list-inside list-disc pl-4 text-md">
+				<ul class="mt-2 list-inside list-none pl-4 text-md">
 					<li class="text-md">
 						I am a big believer in the power of focused work and sprints to get
 						things done. I am also a big believer in sharing things that work
@@ -79,7 +78,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 					</li>
 				</ul>
 			</ol>
-		</div>
+		</div> -->
 	</section>
-	
+	<hr>
 </BaseLayout>
