--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -78,7 +78,7 @@ import { navbarLinks, siteConfig } from '../../site.config';
 							class="md:text-lg lg:text-xl pl-2 lg:pl-3 md:pl-2 inline-block text-sm font-bold transition-colors hover:text-teal-600 dark:text-global-text dark:hover:text-teal-400"
 							href={link.path}
 						>
-							{link.path}
+							{link.title}
 							
 						</a>
 						<span class="dark:text-slate-50">|</span>
