--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -2,6 +2,6 @@
 const year = new Date().getFullYear();
 ---
 
-<footer>
+<footer class="mt-20">
   <p>Built with 💖 by <a href="https://github.com/geauxweisbeck4">Andrew Weisbeck</a>, creator and owner of WeisMind&copy; {year} - All rights reserved</p>
 </footer>
