Updated navlinks and support page + added posts

--- a/src/pages/support.astro
+++ b/src/pages/support.astro
@@ -8,5 +8,9 @@ const meta = {
 ---
 
 <BaseLayout meta={meta}>
-	<h1>Support!</h1>
+<section class="mt-12">
+	<h1 class="text-2xl font-bold t">Support Andrew</h1>
+	<p class="mt-4">You can help support Andrew in various ways that are listed below. Sign up for a subscription on one of the newsletters or creator platforms or donate via CashApp, Venmo, or PayPal. Thank you for your support - I couldn't do it without y'all!</p>
+</section>
+	
 </BaseLayout>
