--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,12 +1,161 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const meta = {
-  description: "Learn more about Andrew and where you can find his work.",
-  title: "About",
-}
+	description: 'Learn more about Andrew and where you can find his work.',
+	title: 'About',
+};
 ---
 
 <BaseLayout meta={meta}>
-  <h1>About Andrew!</h1>
+	<section>
+		<h1 class="text-4xl font-semibold text-black mb-12">About WeisGarden</h1>
+
+		<div class="grid lg:grid-cols-6">
+			<div class="col-span-2">
+				
+				<img
+					class="h-76 w-76 rounded-xl text-center mb-2"
+					src="https://res.cloudinary.com/tar-heel-dev-studio/image/upload/t_logo-digital-garden/v1662777703/andrewlisa.jpg"
+					alt="Andrew and his partner Lisa"
+				/>
+				<div class="mb-2">
+					<h3 class="text-xl text-slate-800 font-semibold">Andrew Weisbeck</h3>
+					<p class="text-sm text-slate-500">
+						Software Developer, Entrepreneur, Writer
+					</p>
+					<img
+						alt="Static Badge"
+						src="https://img.shields.io/badge/Durham%2C_NC-NC?logo=googlemaps&color=white"
+					/>
+				</div>
+
+				<hr class="my-4 text-slate-500" />
+				<h3 class="text-xl text-slate-800 font-semibold text-center">Find Me</h3>
+				<p class="text-center justify-center flex flex-wrap gap-2 mt-2">
+					<a href="https://github.com/geauxweisbeck4">
+						<img
+							alt="GitHub Static Badge"
+							src="https://img.shields.io/badge/GitHub-geauxweisbeck4?logo=github&color=black&link=https%3A%2F%2Fgithub.com%2Fgeauxweisbeck4"
+						/>
+					</a>
+					<a href="https://gitlab.com/geauxweisbeck4">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Gitlab-geauxweisbeck4?logo=gitlab&logoColor=orange&color=white&link=https%3A%2F%2Fgitlab.com%2Fgeauxweisbeck4"
+						/>
+					</a>
+					<a href="https://codepen.io/geauxweisbeck4">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Codepen-geauxweisbeck4?logo=codepen&color=black&link=https%3A%2F%2Fcodepen.io%2Fgeauxweisbeck4"
+						/>
+					</a>
+					<a href="https://replit.com/geauxweisbeck4">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Replit-geauxweisbeck4?logo=replit&color=white&link=https%3A%2F%2Freplit.com%2F%40GeauxWeisbeck4"
+						/>
+					</a>
+					<a href="https://linkedin.com/in/geauxweisbeck4">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/LinkedIn-geauxweisbeck4?color=blue&link=https%3A%2F%2Flinkedin.com%2Fin%2Fgeauxweisbeck4"
+						/>
+					</a>
+					<a href="https://dev.to/geauxweisbeck4">
+						<img
+							alt="dev.to Static Badge"
+							src="https://img.shields.io/badge/dev.to-geauxweisbeck4?logo=devdotto&color=black"
+						/>
+					</a>
+					<a href="https://medium.com/@geauxweisbeck4">
+						<img
+							alt="Medium Static Badge"
+							src="https://img.shields.io/badge/medium-geauxweisbeck4?logo=medium&color=black&link=https%3A%2F%2Fmedium.com%2F%40geauxweisbeck4"
+						/>
+					</a>
+					<a href="https://hashnode.com/@GeauxWeisbeck4">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Hashnode-geauxweisbeck4?logo=hashnode&logoColor=blue&labelColor=white&color=blue&link=https%3A%2F%2Fhashnode.com%2F%40GeauxWeisbeck4"
+						/>
+					</a>
+					<a href="https://fosstodon.org/geauxweisbeck4">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Mastodon-geauxweisbeck4?logo=mastodon&logoColor=white&color=blue&link=https%3A%2F%2Ffosstodon.org%2Fgeauxweisbeck4"
+						/>
+					</a>
+					<a href="https://bsky.app/profile/geauxweisbeck4.bsky.social">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Bluesky-geauxweisbeck4?logo=bluesky&color=white&link=https%3A%2F%2Fbsky.app%2Fprofile%2Fgeauxweisbeck4.bsky.social"
+						/>
+					</a>
+					<a href="https://www.threads.com/@geauxweisbeck4">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Threads-geauxweisbeck4?logo=threads&color=black&link=https%3A%2F%2Fwww.threads.com%2F%40geauxweisbeck4"
+						/>
+					</a>
+					<a href="https://twitter.com/geauxweisbeck4">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Twitter-geauxweisbeck4?logo=x&color=black&link=https%3A%2F%2Fwww.twitter.com%2F%40geauxweisbeck4"
+						/>
+					</a>
+					<a href="https://www.reddit.com/user/Tough_Horse_1502/">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Reddit-geauxweisbeck4?logo=reddit&color=white&link=https%3A%2F%2Fwww.reddit.com%2Fuser%2FTough_Horse_1502%2F"
+						/>
+					</a>
+					<a href="https://ko-fi.com/geauxweisbeck4">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Ko--Fi-geauxweisbeck4?logo=kofi&labelColor=blue&color=white&link=ko-fi.com%2FGeauxWeisbeck4"
+						/>
+					</a>
+					<a href="https://buymeacoffee.com/geauxweisbeck4">
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Buy_Me_A_Coffee-geauxweisbeck4?logo=buymeacoffee&logoColor=black&labelColor=yellow&color=white&link=buymeacoffee.com%2FGeauxWeisbeck4"
+						/>
+					</a>
+					<a
+						href="https://patreon.com/GeauxWeisbeck4dev?utm_medium=unknown&utm_source=join_link&utm_campaign=creatorshare_creator&utm_content=copyLink"
+					>
+						<img
+							alt="Static Badge"
+							src="https://img.shields.io/badge/Patreon-geauxweisbeck4?logo=patreon&color=black&link=https%3A%2F%2Fpatreon.com%2FGeauxWeisbeck4dev%3Futm_medium%3Dunknown%26utm_source%3Djoin_link%26utm_campaign%3Dcreatorshare_creator%26utm_content%3DcopyLink"
+						/>
+					</a>
+				</p>
+			</div>
+			<div class="ml-16 col-span-4">
+				<h2 class="text-2xl font-bold text-slate-800 text-center">
+					Hi, I'm Andrew - thanks for stopping by!
+				</h2>
+				<br />
+				<p class="text-md text-black mb-4">
+					WeisGarden has been a project that I've been working on for quite a
+					while - ever since I learned about digital gardens 3-4 years ago
+					really. It would seem easy to just throw a personal blog up and share
+					it right? Not for this guy...
+				</p>
+				<p class="text-md text-black mb-4">
+					This project has been carefully planned and created because I take my
+					writing very seriously and want to make sure I own and share my
+					content how I want - WeisGarden is a reflection of my craft as both a
+					developer, creator, and writer.
+				</p>
+				<p class="text-md text-black mb-4">
+					I hope you enjoy browisng and reading this site as much as I did
+					creating this project and writing each day. Thank you for your support
+					and reach out to me, please!
+				</p>
+			</div>
+		</div>
+	</section>
 </BaseLayout>
