Add content and changes to support page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,9 +50,15 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 		</div>
 	</section>
 
-	<h1 class="text-3xl font-bold text-black mt-10">
-		Featured Content
-	</h1>
+	<h1 class="text-3xl font-bold text-black mt-10">WeisGarden News</h1>
+
+	<section class="mt-16">
+		<h2 class="text-accent2 title text-3xl mb-6">What's New? (Work in Progress)</h2>
+		<p class="text-md text-red-700">This part of the website will contain any news or any updates that you should be aware of. It will also contain a section for things that are being worked on or other tasks that are being planned to be worked on if feasible. As of now, it is sort of a work in progress.</p>
+	</section>
+
+
+	<h1 class="text-3xl font-bold text-black mt-10">Featured Content</h1>
 
 	<!-- Blog Posts -->
 
