--- a/src/pages/support.astro
+++ b/src/pages/support.astro
@@ -8,9 +8,54 @@ const meta = {
 ---
 
 <BaseLayout meta={meta}>
-<section class="mt-12">
-	<h1 class="text-2xl font-bold t">Support Andrew</h1>
-	<p class="mt-4">You can help support Andrew in various ways that are listed below. Sign up for a subscription on one of the newsletters or creator platforms or donate via CashApp, Venmo, or PayPal. Thank you for your support - I couldn't do it without y'all!</p>
-</section>
-	
+	<section class="mt-12">
+		<h1 class="text-2xl font-bold">Support Andrew</h1>
+		<p class="mt-4">
+			You can help support Andrew in various ways that are listed below. Sign up
+			for a subscription on one of the newsletters or creator platforms or
+			donate via CashApp, Venmo, or PayPal. Thank you for your support - I
+			couldn't do it without y'all!
+		</p>
+	</section>
+
+	<section class="mt-12">
+		<h1 class="text-2xl font-bold">
+			Creator Pages: <strong class="text-sky-600">Ko-Fi</strong>, <strong
+				class="text-yellow-500">Buy Me A Coffee</strong
+			>, and Patreon
+		</h1>
+		<p class="mt-4">
+			If you enjoy Andrew's content and would like to support his work, consider
+			buying him a coffee! Your support helps keep the creativity flowing and is
+			greatly appreciated.
+		</p>
+		<br />
+		<div class="flex gap-6">
+			<a href="https://ko-fi.com/Z8Z2D853F" target="_blank"
+				><img
+					height="60"
+					style="border:0px;height:60px;"
+					src="https://storage.ko-fi.com/cdn/kofi6.png?v=6"
+					border="0"
+					alt="Buy Me a Coffee at ko-fi.com"
+				/></a
+			>
+			<a href="https://www.buymeacoffee.com/GeauxWeisbeck4" target="_blank"
+				><img
+					src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png"
+					alt="Buy Me A Coffee"
+					style="height: 60px !important;width: 217px !important;"
+				/></a
+			>
+			<a
+				href="https://patreon.com/GeauxWeisbeck4dev?utm_medium=unknown&utm_source=join_link&utm_campaign=creatorshare_creator&utm_content=copyLink"
+				target="_blank"
+				><img
+					src="https://res.cloudinary.com/tar-heel-dev-studio/image/upload/v1761535769/image_post-patreon-logo_mrkq5z.png"
+					alt="Patreon logo"
+					class="h-16 w-28 border-black border-1 rounded-lg"
+				/>
+			</a>
+		</div>
+	</section>
 </BaseLayout>
